#VERSION 0.9.5#
 
 - added few enhancements in debugbar.js and debugbar.css
 - fixed some js functions to use properly window size for panels in debugbar.js
 - removed deprecated file appcreate.php
 - removed vendor Geshi
 - updated css twitter bootstrap in Peak_Controller_Internal_Pkdoc and Peak_Controller_Internal_Pkwelcome
 - updated vendor twitter bootstrap to 2.2.1 and remove version folder to avoid changing integration url each time
 - fixed a bug in Peak_Controller_Internal_Pkdoc introduced by changes of Peak_View_Render_VirtualLayouts in previous version

#VERSION 0.9.4#

 - added method cleanUnknownVars() and property $_clean_all_unknown_vars in Peak_View_Render_VirtualLayouts
 - modified method initConfig in Peak_Core to support absent or unsupported application config by using genericapp.ini 
   only in development env
 - enhanced Peak_Controller_Internal_Pkwelcome functionality and content
 - added a quick variables template system for Peak_View_Render_VirtualLayouts by adding method _processVariables()
   and by modifying method render()
 - remodified the recent change about an exception throw in Peak_Core::initConfig(), by enable it again only if 
   app environment is not development
 - marked as deprecated property $_extensions, methods __call() and ext() from class Peak_Core
 - added class Peak_Controller_Internal_Pkwelcome. This new controller is used by default in genericapp.ini
 - added file genericapp.ini in Peak/Application
 - disabled an exception throw in Peak_Core::initConfig() when loading an empty app config file
 - fixed notice in method initConfig() of class Peak_Core due to the change in Peak_Config_Ini
 - fixed an exception throw in Peak_Config_Ini in case of empty file
 - added property $_password_salt and method getSalt() to class Peak_Model_Authentication
 - marked class Peak_View_Helper_html as deprecated
 - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
 - updated vendor twitter bootstrap to 2.1.0