@@ -1,5 +1,6 @@
 #VERSION 0.9.5#
  
+ - added better zend_db profiler infos in Peak_View_Helper_Debugbar + minor css change in debugbar.css
  - added few enhancements in debugbar.js and debugbar.css
  - fixed some js functions to use properly window size for panels in debugbar.js
  - removed deprecated file appcreate.php
